--- a/Model.ipynb
+++ b/Model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "id": "ee0ae897",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
     "import plotly.express as px\n",
     "from matplotlib import pyplot as plt\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn import metrics\n",
     "from collections import Counter"
    ]
@@ -326,13 +326,56 @@
    "id": "b2f7d626",
    "metadata": {},
    "source": [
-    "Now we to split the data into features and labels and convert the categorical features into numerical ones."
+    "Now we to split the data into features and labels and then convert the categorical features into numerical ones.\n",
+    "our dataset have the following types of features {object, int64, float64} so we will convert all columns of object type and encode it to be numerical"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "c671c3c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating a dataframe contains only the features by dropping the label column\n",
+    "features = original_dataset.drop(columns='is_fraud') \n",
+    "\n",
+    "# create the label column\n",
+    "label = original_dataset['is_fraud']\n",
+    "\n",
+    "# convert the categorical features into numrical\n",
+    "# first we need to define the encoder \n",
+    "encoder = LabelEncoder()\n",
+    "# then apply encoding on each feature of type ('object') \n",
+    "\n",
+    "for feature in features:\n",
+    "    if features[feature].dtype == 'object':\n",
+    "        features[feature] = encoder.fit_transform(features[feature])\n",
+    "\n",
+    "# features.head()\n",
+    "print(features['cc_num'].dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e2a1bfb",
+   "metadata": {},
+   "source": [
+    "The feature ('cc_num') is considered as ('Int64') and it has a wide range of value which consumes a lot of time to train so we will consider it as a categorical feature and encode it to narrow the range of values.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "794aa906",
    "metadata": {},
    "outputs": [
     {
@@ -384,24 +427,24 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>2019-01-01 00:00:18</td>\n",
-       "      <td>2703186189652095</td>\n",
-       "      <td>fraud_Rippin, Kub and Mann</td>\n",
-       "      <td>misc_net</td>\n",
+       "      <td>0</td>\n",
+       "      <td>444</td>\n",
+       "      <td>514</td>\n",
+       "      <td>8</td>\n",
        "      <td>4.97</td>\n",
-       "      <td>Jennifer</td>\n",
-       "      <td>Banks</td>\n",
-       "      <td>F</td>\n",
-       "      <td>561 Perry Cove</td>\n",
-       "      <td>Moravian Falls</td>\n",
-       "      <td>NC</td>\n",
+       "      <td>162</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0</td>\n",
+       "      <td>568</td>\n",
+       "      <td>526</td>\n",
+       "      <td>27</td>\n",
        "      <td>28654</td>\n",
        "      <td>36.0788</td>\n",
        "      <td>-81.1781</td>\n",
        "      <td>3495</td>\n",
-       "      <td>Psychologist, counselling</td>\n",
-       "      <td>1988-03-09</td>\n",
-       "      <td>0b242abb623afc578575680df30655b9</td>\n",
+       "      <td>370</td>\n",
+       "      <td>779</td>\n",
+       "      <td>56438</td>\n",
        "      <td>1325376018</td>\n",
        "      <td>36.011293</td>\n",
        "      <td>-82.048315</td>\n",
@@ -409,24 +452,24 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>2019-01-01 00:00:44</td>\n",
-       "      <td>630423337322</td>\n",
-       "      <td>fraud_Heller, Gutmann and Zieme</td>\n",
-       "      <td>grocery_pos</td>\n",
+       "      <td>1</td>\n",
+       "      <td>42</td>\n",
+       "      <td>241</td>\n",
+       "      <td>4</td>\n",
        "      <td>107.23</td>\n",
-       "      <td>Stephanie</td>\n",
-       "      <td>Gill</td>\n",
-       "      <td>F</td>\n",
-       "      <td>43039 Riley Greens Suite 393</td>\n",
-       "      <td>Orient</td>\n",
-       "      <td>WA</td>\n",
+       "      <td>309</td>\n",
+       "      <td>157</td>\n",
+       "      <td>0</td>\n",
+       "      <td>435</td>\n",
+       "      <td>612</td>\n",
+       "      <td>47</td>\n",
        "      <td>99160</td>\n",
        "      <td>48.8878</td>\n",
        "      <td>-118.2105</td>\n",
        "      <td>149</td>\n",
-       "      <td>Special educational needs teacher</td>\n",
-       "      <td>1978-06-21</td>\n",
-       "      <td>1f76529f8574734946361c461b024d99</td>\n",
+       "      <td>428</td>\n",
+       "      <td>607</td>\n",
+       "      <td>159395</td>\n",
        "      <td>1325376044</td>\n",
        "      <td>49.159047</td>\n",
        "      <td>-118.186462</td>\n",
@@ -434,24 +477,24 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>2019-01-01 00:00:51</td>\n",
-       "      <td>38859492057661</td>\n",
-       "      <td>fraud_Lind-Buckridge</td>\n",
-       "      <td>entertainment</td>\n",
+       "      <td>2</td>\n",
+       "      <td>237</td>\n",
+       "      <td>390</td>\n",
+       "      <td>0</td>\n",
        "      <td>220.11</td>\n",
-       "      <td>Edward</td>\n",
-       "      <td>Sanchez</td>\n",
-       "      <td>M</td>\n",
-       "      <td>594 White Dale Suite 530</td>\n",
-       "      <td>Malad City</td>\n",
-       "      <td>ID</td>\n",
+       "      <td>115</td>\n",
+       "      <td>381</td>\n",
+       "      <td>1</td>\n",
+       "      <td>602</td>\n",
+       "      <td>468</td>\n",
+       "      <td>13</td>\n",
        "      <td>83252</td>\n",
        "      <td>42.1808</td>\n",
        "      <td>-112.2620</td>\n",
        "      <td>4154</td>\n",
-       "      <td>Nature conservation officer</td>\n",
-       "      <td>1962-01-19</td>\n",
-       "      <td>a1a22d70485983eac12b5b88dad1cf95</td>\n",
+       "      <td>307</td>\n",
+       "      <td>302</td>\n",
+       "      <td>818703</td>\n",
        "      <td>1325376051</td>\n",
        "      <td>43.150704</td>\n",
        "      <td>-112.154481</td>\n",
@@ -459,24 +502,24 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>2019-01-01 00:01:16</td>\n",
-       "      <td>3534093764340240</td>\n",
-       "      <td>fraud_Kutch, Hermiston and Farrell</td>\n",
-       "      <td>gas_transport</td>\n",
+       "      <td>3</td>\n",
+       "      <td>509</td>\n",
+       "      <td>360</td>\n",
+       "      <td>2</td>\n",
        "      <td>45.00</td>\n",
-       "      <td>Jeremy</td>\n",
-       "      <td>White</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9443 Cynthia Court Apt. 038</td>\n",
-       "      <td>Boulder</td>\n",
-       "      <td>MT</td>\n",
+       "      <td>163</td>\n",
+       "      <td>463</td>\n",
+       "      <td>1</td>\n",
+       "      <td>930</td>\n",
+       "      <td>84</td>\n",
+       "      <td>26</td>\n",
        "      <td>59632</td>\n",
        "      <td>46.2306</td>\n",
        "      <td>-112.1138</td>\n",
        "      <td>1939</td>\n",
-       "      <td>Patent attorney</td>\n",
-       "      <td>1967-01-12</td>\n",
-       "      <td>6b849c168bdad6f867558c3793159a81</td>\n",
+       "      <td>328</td>\n",
+       "      <td>397</td>\n",
+       "      <td>544575</td>\n",
        "      <td>1325376076</td>\n",
        "      <td>47.034331</td>\n",
        "      <td>-112.561071</td>\n",
@@ -484,24 +527,24 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>2019-01-01 00:03:06</td>\n",
-       "      <td>375534208663984</td>\n",
-       "      <td>fraud_Keeling-Crist</td>\n",
-       "      <td>misc_pos</td>\n",
+       "      <td>4</td>\n",
+       "      <td>368</td>\n",
+       "      <td>297</td>\n",
+       "      <td>9</td>\n",
        "      <td>41.96</td>\n",
-       "      <td>Tyler</td>\n",
-       "      <td>Garcia</td>\n",
-       "      <td>M</td>\n",
-       "      <td>408 Bradley Rest</td>\n",
-       "      <td>Doe Hill</td>\n",
-       "      <td>VA</td>\n",
+       "      <td>336</td>\n",
+       "      <td>149</td>\n",
+       "      <td>1</td>\n",
+       "      <td>418</td>\n",
+       "      <td>216</td>\n",
+       "      <td>45</td>\n",
        "      <td>24433</td>\n",
        "      <td>38.4207</td>\n",
        "      <td>-79.4629</td>\n",
        "      <td>99</td>\n",
-       "      <td>Dance movement psychotherapist</td>\n",
-       "      <td>1986-03-28</td>\n",
-       "      <td>a41d7549acf90789359a9aa5346dcb46</td>\n",
+       "      <td>116</td>\n",
+       "      <td>734</td>\n",
+       "      <td>831111</td>\n",
        "      <td>1325376186</td>\n",
        "      <td>38.674999</td>\n",
        "      <td>-78.632459</td>\n",
@@ -511,68 +554,150 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0 trans_date_trans_time            cc_num  \\\n",
-       "0           0   2019-01-01 00:00:18  2703186189652095   \n",
-       "1           1   2019-01-01 00:00:44      630423337322   \n",
-       "2           2   2019-01-01 00:00:51    38859492057661   \n",
-       "3           3   2019-01-01 00:01:16  3534093764340240   \n",
-       "4           4   2019-01-01 00:03:06   375534208663984   \n",
+       "   Unnamed: 0  trans_date_trans_time  cc_num  merchant  category     amt  \\\n",
+       "0           0                      0     444       514         8    4.97   \n",
+       "1           1                      1      42       241         4  107.23   \n",
+       "2           2                      2     237       390         0  220.11   \n",
+       "3           3                      3     509       360         2   45.00   \n",
+       "4           4                      4     368       297         9   41.96   \n",
        "\n",
-       "                             merchant       category     amt      first  \\\n",
-       "0          fraud_Rippin, Kub and Mann       misc_net    4.97   Jennifer   \n",
-       "1     fraud_Heller, Gutmann and Zieme    grocery_pos  107.23  Stephanie   \n",
-       "2                fraud_Lind-Buckridge  entertainment  220.11     Edward   \n",
-       "3  fraud_Kutch, Hermiston and Farrell  gas_transport   45.00     Jeremy   \n",
-       "4                 fraud_Keeling-Crist       misc_pos   41.96      Tyler   \n",
+       "   first  last  gender  street  city  state    zip      lat      long  \\\n",
+       "0    162    18       0     568   526     27  28654  36.0788  -81.1781   \n",
+       "1    309   157       0     435   612     47  99160  48.8878 -118.2105   \n",
+       "2    115   381       1     602   468     13  83252  42.1808 -112.2620   \n",
+       "3    163   463       1     930    84     26  59632  46.2306 -112.1138   \n",
+       "4    336   149       1     418   216     45  24433  38.4207  -79.4629   \n",
        "\n",
-       "      last gender                        street            city state    zip  \\\n",
-       "0    Banks      F                561 Perry Cove  Moravian Falls    NC  28654   \n",
-       "1     Gill      F  43039 Riley Greens Suite 393          Orient    WA  99160   \n",
-       "2  Sanchez      M      594 White Dale Suite 530      Malad City    ID  83252   \n",
-       "3    White      M   9443 Cynthia Court Apt. 038         Boulder    MT  59632   \n",
-       "4   Garcia      M              408 Bradley Rest        Doe Hill    VA  24433   \n",
-       "\n",
-       "       lat      long  city_pop                                job         dob  \\\n",
-       "0  36.0788  -81.1781      3495          Psychologist, counselling  1988-03-09   \n",
-       "1  48.8878 -118.2105       149  Special educational needs teacher  1978-06-21   \n",
-       "2  42.1808 -112.2620      4154        Nature conservation officer  1962-01-19   \n",
-       "3  46.2306 -112.1138      1939                    Patent attorney  1967-01-12   \n",
-       "4  38.4207  -79.4629        99     Dance movement psychotherapist  1986-03-28   \n",
-       "\n",
-       "                          trans_num   unix_time  merch_lat  merch_long  \n",
-       "0  0b242abb623afc578575680df30655b9  1325376018  36.011293  -82.048315  \n",
-       "1  1f76529f8574734946361c461b024d99  1325376044  49.159047 -118.186462  \n",
-       "2  a1a22d70485983eac12b5b88dad1cf95  1325376051  43.150704 -112.154481  \n",
-       "3  6b849c168bdad6f867558c3793159a81  1325376076  47.034331 -112.561071  \n",
-       "4  a41d7549acf90789359a9aa5346dcb46  1325376186  38.674999  -78.632459  "
+       "   city_pop  job  dob  trans_num   unix_time  merch_lat  merch_long  \n",
+       "0      3495  370  779      56438  1325376018  36.011293  -82.048315  \n",
+       "1       149  428  607     159395  1325376044  49.159047 -118.186462  \n",
+       "2      4154  307  302     818703  1325376051  43.150704 -112.154481  \n",
+       "3      1939  328  397     544575  1325376076  47.034331 -112.561071  \n",
+       "4        99  116  734     831111  1325376186  38.674999  -78.632459  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# creating a dataframe contains only the features by dropping the label column\n",
-    "features = original_dataset.drop(columns='is_fraud') \n",
+    "# convert the feature 'cc_num' to categorical feature\n",
+    "features['cc_num'] = features['cc_num'].astype('object')\n",
     "\n",
-    "# create the label column\n",
-    "label = original_dataset['is_fraud']\n",
-    "\n",
-    "# convert the categorical features into numrical\n",
-    "# first we will combine all categorical features\n",
-    "# categorical_features = features.select_dtypes(['category']).columns\n",
-    "features['gender'] = features['gender'].cat.codes \n",
-    "#then apply encoding in each of this features \n",
-    "# features[categorical_features] = features[categorical_features].apply(lambda x : x.cat.codes)\n",
+    "# encode the feature's values\n",
+    "features['cc_num'] = encoder.fit_transform(features['cc_num'])\n",
     "\n",
     "features.head()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "87c887d7",
+   "metadata": {},
+   "source": [
+    "Now we need to split our data into training and testing sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6d5896ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "features_train , features_test , label_train , label_test = train_test_split(features,label,test_size=0.2,random_state=42,stratify=label)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "723c5f56",
+   "metadata": {},
+   "source": [
+    "Now we need to import and train the random forest model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "794aa906",
+   "id": "793da63d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "\n",
+    "model = RandomForestClassifier(random_state=42, class_weight='balanced')\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(features_train, label_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e03e417d",
+   "metadata": {},
+   "source": [
+    "Now we will make predictions and see a report of the errors measuring the misclassified samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1d63b58f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00    257834\n",
+      "           1       0.95      0.66      0.78      1501\n",
+      "\n",
+      "    accuracy                           1.00    259335\n",
+      "   macro avg       0.97      0.83      0.89    259335\n",
+      "weighted avg       1.00      1.00      1.00    259335\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "label_predictions = model.predict(features_test)\n",
+    "\n",
+    "# Print classification report\n",
+    "print(classification_report(label_test, label_predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5c497a06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[257784     50]\n",
+      " [   510    991]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(confusion_matrix(label_test, label_predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ee8b731",
    "metadata": {},
    "outputs": [],
    "source": []
